--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vue": "^3.0.0-rc.5",
     "vue-router": "^4.0.0-alpha.6",
     "vuex": "^4.0.0-alpha.1",
-    "webpack": "^4.43.0",
+    "webpack": "^4.47.0",
     "yaml": "^1.10.0",
     "yaml-loader": "^0.6.0"
   },
@@ -32,8 +32,8 @@
     "vue-cli-plugin-vue-next": "~0.1.3"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
   ]
 }
